# ICSSI-2026-Hackaton

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  LICENSE  PIPELINE_PLAN.md  README.md  flake.nix  package.json  pnpm-workspace.yaml  pyproject.toml
.claude/skills/claude-kit/: SKILL.md
.claude/skills/sql/: SKILL.md
altendor/: pyproject.toml
altendor/data/calibration/: README.md  labeled.jsonl  last_report.md
altendor/output/: .gitignore
altendor/src/altendor/: __init__.py
altendor/src/altendor/assemble/: __init__.py  builder.py  deltabay_writer.py  intermediate.py
altendor/src/altendor/bigquery/: __init__.py  preflight.py  queries.py
altendor/src/altendor/classify/: __init__.py  batch.py  calibration.py  classifier.py  prompts.py  schema.py
altendor/src/altendor/cluster/: __init__.py  claims.py
altendor/src/altendor/enrich/: __init__.py  bluesky.py  reddit.py  text_resolver.py
altendor/src/altendor/io/: __init__.py  manifest.py  paths.py
altendor/src/altendor/route/: __init__.py  question_router.py
altendor/src/altendor/schema/: __init__.py  __main__.py  dump.py
altendor/src/altendor/sources/: __init__.py  altmetric.py  openalex.py
altendor/src/altendor/traverse/: __init__.py  replies.py
altendor/tests/: conftest.py
altendor/tests/fixtures/: bluesky_resolve_handle.json  bluesky_thread.json  openalex_topics_search.json  openalex_work_doi.json  openalex_works_page.json  reddit_submission.json
altendor/tests/live/: test_calibration_gate.py
altendor/tests/unit/: test_altmetric.py  test_assembly.py  test_batch_classifier.py  test_bluesky.py  test_calibration.py  test_classifier_mocked.py  test_clustering.py  test_openalex.py  test_prompts.py  test_queries.py  test_reddit.py  test_routing.py  test_text_resolver.py  test_traverse.py
notebooks/: 0_altmetrics_gbq_setup.ipynb  1_select_papers.ipynb  2_gather_posts.ipynb  3_enrich_text.ipynb  4_calibrate_classifier.ipynb  5_classify_batch.ipynb  6_traverse_replies.ipynb  7_cluster_claims.ipynb  8_route_and_assemble.ipynb  9_publish_to_deltabay.ipynb
notebooks/demos/: Demo_Altmetric_Explorer_and_Details_Page_API.ipynb
notebooks/queries/: altmetric_top_recent_by_score.sql
(+6 files in other folders)
