[project]
name = "icssi-2026-hackathon"
version = "0.1.0"
description = "ICSSI 2026 Hackathon data analysis"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "plotly>=5.24",
    "seaborn>=0.13",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.4",
    "ty>=0.0.14",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--durations=10"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "ANN"]
ignore = ["E501"]

[tool.ty.environment]
python-version = "3.12"
