[project]
name = "altendor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AutoMathis", email = "automathis@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "plotly>=5.24",
    "seaborn>=0.13",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "bigquery-magics>=0.15.0",
    "google-cloud-bigquery>=3.25",
    "db-dtypes>=1.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.28.1",
    "aiohttp>=3.14.1",
    "praw>=8.0.2",
    "anthropic>=0.112.0",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"
